# a2d

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.sentrux/: baseline.json
crates/a2d-cli/: Cargo.toml
crates/a2d-cli/src/: convert.rs  detect.rs  eval.rs  main.rs  resume.rs  runs.rs  sample.rs  worker_cmd.rs
crates/a2d-cli/tests/: e2e.rs
crates/a2d-contracts/: Cargo.toml
crates/a2d-contracts/src/: lib.rs
crates/a2d-detect/: Cargo.toml
crates/a2d-detect/src/: gate.rs  generic.rs  lib.rs  spec.rs
crates/a2d-detect/src/adapters/: gemma.rs  gemma3.rs  gpt2.rs  gpt_oss.rs  llama.rs  mod.rs  olmoe.rs  qwen2.rs
crates/a2d-detect/tests/: corpus.rs
crates/a2d-run/: Cargo.toml
crates/a2d-run/src/: lib.rs  rundir.rs  worker.rs
docs/: ARCHITECTURE.md  CONCEPTS.md  LANDSCAPE.md  PLAN-PHASE0.md  PLAN-PHASE1.md  PLAN-PHASE2.md  PLAN-PHASE3.md  SPEC-HANDOFF.md
fixtures/configs/: README.md
fixtures/configs/gemma/: config.json
fixtures/configs/gemma2/: config.json  expected.json
fixtures/configs/gemma3/: config.json  expected.json
fixtures/configs/gemma3-270m/: config.json  expected.json
fixtures/configs/gpt-oss/: expected.json
fixtures/configs/mamba/: expected.json
fixtures/configs/olmoe/: config.json
fixtures/golden/: README.md
schema/: conversion_job.schema.json  eval_report.schema.json  eval_request.schema.json  event_envelope.schema.json  manifest.schema.json  sample_request.schema.json
scripts/: codegen.sh
(+1 files in other folders)
