[package]
name = "a2d-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "a2d"
path = "src/main.rs"

[dependencies]
a2d-run = { path = "../a2d-run" }
a2d-contracts = { path = "../a2d-contracts" }
a2d-detect = { path = "../a2d-detect" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
