[package]
name = "a2d-detect"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
a2d-contracts = { path = "../a2d-contracts" }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
