[package]
name = "a2d-run"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
a2d-contracts = { path = "../a2d-contracts" }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
